# memex-cli

./: .mem-codecli.toml  CLAUDE.md  Cargo.toml  README.md  config.toml  install_memex.ps1  install_memex.py  memex-env.bat  memex-env.ps1  memex-env.sh  memwrap.toml  start_with_env.ps1
.claude/: settings.json  settings.json1
.claude/hooks/: README.md  http_client.py  memory-hit.py  memory-inject.py  memory-record.py  project_utils.py  record-session-enhanced.py  server_manager.py  session-cleanup.py  session-init.py  verify-migration.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: app.rs  lib.rs  main.rs  plan.rs  task_level.rs
core/: Cargo.toml
core/benches/: stdio_perf.rs
core/examples/: state_management.rs
core/src/: api.rs  context.rs  lib.rs
core/tests/: executor_integration.rs  perf_tool_event_runtime.rs  structured_text_integration.rs  tool_events_claude.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  lib.rs  types.rs
crates/core/src/config/: load.rs  model.rs
crates/core/src/errors/: config_error.rs  core_error.rs  memory_error.rs  mod.rs  parse_error.rs  policy_error.rs  redact_error.rs  runner_error.rs
crates/core/src/gatekeeper/: heuristics.rs  mod.rs  trait.rs
crates/core/src/io/: mod.rs  session.rs  tee.rs
crates/core/src/memory/: trait.rs
crates/core/src/observability/: trace.rs
crates/core/src/policy/: mod.rs  rules.rs  trait.rs
crates/core/src/prompt/: builder.rs  templates.rs
crates/core/src/redact/: scanner.rs
crates/core/src/runner/: codecli.rs  mod.rs  trait.rs
crates/core/src/tool_events/: trait.rs
crates/mem-client/: Cargo.toml
crates/mem-codecli/: Cargo.toml
crates/mem-codecli/src/: main.rs  wiring.rs
crates/mem-codecli/src/commands/: doctor.rs  memory.rs  mod.rs  policies.rs  run.rs
crates/policy-engine/: Cargo.toml
crates/testkit/: Cargo.toml
docs/: 1-summary.md  1.md  ARCHITECTURE.md  EXECUTOR_PLUGIN_IMPLEMENTATION_PLAN.md  REFACTOR-PLAN.md  REFACTORING_ROADMAP.md  STATE-INTEGRATION-CHECKLIST.md  STATE-INTEGRATION-CODE-EXAMPLES.md  STATE-INTEGRATION-DIAGRAMS.md  STATE-INTEGRATION-OVERVIEW.md  STATE-INTEGRATION-PLAN.md  STATE-MANAGEMENT.md  STDIO_PROTOCOL.md  TERMINOLOGY.md  config-schema.md  core-module-execution-spec.md  data-flow.md  ex-code.md  mem-codecli-design.md  members.md  protocol-error-handle.md  protocol-policy-control.md  protocol-tool-events.md  run-id-resume-env-perf.md  state-architecture-diagrams.md  state-delivery-checklist.md  state-files.md  state-implementation-summary.md  state-quick-reference.md  stdoutstderr-stream-tee.md  tree.md  tui-design.md  tui-refactor-plan.md
memory/: .gitignore  CHANGELOG.md  LICENSE  README.md  SETTINGS_TEMPLATE.md  requirements-http.txt
memory/.claude-plugin/: plugin.json
memory/commands/: health.md  logs.md  record.md  reset.md  search.md  setup-memex.md  setup.md  test-memory.md  test.md  validate-hooks.md  view-memory-logs.md
memory/hooks/: hooks.json
memory/scripts/: gatekeeper.py  long_text_handler.py  memory-record.py  server_manager.py  session-cleanup.py  session-init.py  session_state.py  transcript_parser.py
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-x64/: package.json
npm/memex-cli/: bin.js  package.json
npm/win32-x64/: package.json
plugins/: Cargo.toml
plugins/src/: factory.rs  lib.rs  plan.rs  services.rs
plugins/src/backend/: aiservice.rs  codecli.rs  encoding.rs
plugins/src/executor/: mod.rs
plugins/src/executor/processors/: context.rs  files.rs
plugins/src/executor/renderers/: jsonl.rs
plugins/src/gatekeeper/: mod.rs  standard.rs
plugins/src/memory/: http_client.rs  local.rs  mod.rs  service.rs  trait.rs
plugins/src/observability/: types.rs
plugins/src/policy/: config_rules.rs  mod.rs
plugins/src/runner/: codecli.rs  mod.rs  replay.rs
plugins/src/stream/: jsonl.rs  text.rs
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/events_out/: events_out_helpers.rs  mod.rs  (+1 more)
static/: login.html
tests/: integration_run.rs  tool_events_codex.rs
(+164 files in other folders)
