[package]
name = "memex_cli"
version = "0.1.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "A command-line interface for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex_cli"


[workspace]
resolver = "2"
members = [
  "crates/mem-codecli",
  "crates/core",
  "crates/mem-client",
  "crates/policy-engine",
  "crates/testkit"
]

[workspace.dependencies]
tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread"] }
clap = { version = "^4.5", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = "^0.3"
anyhow = "^1.0"
async-trait = "^0.1"
bytes = "^1.5"
reqwest = { version = "^0.11", features = ["json"] }
chrono = { version = "^0.4", features = ["serde"] }
futures = "^0.3"
regex = "^1.10"
uuid = { version = "^1.6", features = ["v4"] }