[package]
name = "memex-cli"
version = "0.1.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "A command-line interface for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"
[lib]
name = "memex_cli"
path = "src/lib.rs"

[package.metadata.bundle]
identifier = "memex-cli"

[dependencies]
tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread", "io-std", "fs"] }
clap = { version = "^4.5", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
anyhow = "^1.0"
async-trait = "^0.1"
bytes = "^1.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "^0.4", features = ["serde"] }
toml = "0.8"
futures = "^0.3"
regex = "^1.10"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tokio-test = "^0.4"
tempfile = "^3.6"
mockito = "^1.3"
pretty_assertions = "^1.3"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
