[package]
name = "memex-plugins"
version = "0.1.0"
edition = "2021"
authors = ["chaorenex1"]
license = "Apache-2.0"
description = "Core logic for CodeCLI powered by Memex"
repository = "https://github.com/chaorenex/memex-cli"

[dependencies]
memex-core = { workspace = true}
tokio = { workspace = true}
clap = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
thiserror = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
anyhow = { workspace = true}
async-trait = { workspace = true}
bytes = { workspace = true}
reqwest = { workspace = true}
chrono = { workspace = true}
toml = { workspace = true}
futures = { workspace = true}
regex = { workspace = true}
uuid = { workspace = true}