[package]
name = "mem-codecli"
version = "0.1.0"
edition = "2021"

[dependencies]
memex-core = { path = "../core" }
mem-client = { path = "../mem-client" }
policy-engine = { path = "../policy-engine" }
anyhow.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true